--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -118,9 +118,9 @@ jobs:
         cd src
         cmake --install .
 
-    - name: check Existing dhart 
-      run: |
-        python -c "from dhart.spatialstructures import Graph"
+    # - name: check Existing dhart 
+    #   run: |
+    #     python -c "from dhart.spatialstructures import Graph"
 
     - name: Install package
       run: |
