--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -88,13 +88,13 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
 
-    # - name: Install from pypi
-    #   run: | 
-    #     pip install matplotlib 
-    #     pip install numpy 
-    #     pip install scipy
-    #     pip install dhart
-    #     python -c "from dhart.spatialstructures import Graph"
+    - name: Install from pypi
+      run: | 
+        pip install matplotlib 
+        pip install numpy 
+        pip install scipy
+        pip install dhart
+        python -c "from dhart.spatialstructures import Graph"
 
     - name: Install documentation dependencies
       run: |
@@ -122,12 +122,12 @@ jobs:
     #   run: |
     #     python -c "from dhart.spatialstructures import Graph"
 
-    - name: Install package
-      run: |
-        ls
-        cd build/Python
-        ls
-        pip install . 
+    # - name: Install package
+    #   run: |
+    #     ls
+    #     cd build/Python
+    #     ls
+    #     pip install . 
 
     # - name: test if package dll is installed
     #   run: | 
