--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -10,7 +10,7 @@ jobs:
 
     runs-on: windows-2019
     strategy:
-      max-parallel: 1
+      max-parallel: 0
       matrix:
         python-version: [3.8]
 
@@ -69,7 +69,7 @@ jobs:
   sphinx:
     runs-on: windows-2019
     strategy:
-      max-parallel: 1
+      max-parallel: 0
       matrix:
         python-version: [3.8]
 
@@ -156,7 +156,7 @@ jobs:
         cd html
         ls
 
-    - name: Auto-deploy doc changes
+    - name: Auto-deploy python doc changes
       run : |
         
         git config --local user.email "action@github.com"
