--- a/src/CMakeLists.txt.in
+++ b/src/CMakeLists.txt.in
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.2)
+cmake_minimum_required(VERSION 3.8)
 
 project(googletest-download NONE)
 
@@ -12,4 +12,6 @@ ExternalProject_Add(googletest
   BUILD_COMMAND     ""
   INSTALL_COMMAND   ""
   TEST_COMMAND      ""
+  LOG_DOWNLOAD 1
+  LOG_BUILD 1
 )
