--- a/.github/workflows/documentation_test.yml
+++ b/.github/workflows/documentation_test.yml
@@ -1,9 +1,9 @@
 name: Documentation
 
 on:
-  push:
-    branches:    
-      - dev_stage
+    pull_request:
+        branches:    
+            - dev_stage
 
 jobs:
   doxygen:
