--- a/.github/workflows/documentation_test.yml
+++ b/.github/workflows/documentation_test.yml
@@ -4,6 +4,9 @@ on:
     pull_request:
         branches:    
             - dev_stage
+    push:
+        branches:    
+            - dev_stage
 
 jobs:
   doxygen:
