--- a/.github/workflows/documentation_test.yml
+++ b/.github/workflows/documentation_test.yml
@@ -31,7 +31,8 @@ jobs:
         $url = "https://www.doxygen.nl/files/doxygen-1.9.5.windows.x64.bin.zip"
         Invoke-WebRequest -Uri $url -OutFile "C:\doxygen.zip"
         
-        Extract-7Zip -Path  "C:\doxygen.zip" -DestinationPath "C:\windows\system32"
+        7z x "C:\doxygen.zip" -o"C:\windows\system32" -y
+
         doxygen --version`
 
         choco install graphviz -y
