--- a/.github/workflows/documentation_test.yml
+++ b/.github/workflows/documentation_test.yml
@@ -51,24 +51,7 @@ jobs:
         doxygen Doxyfile_Csharp
         doxygen Doxyfile_Public_CSharp
 
-    - name: Auto-deploy doc changes
-      run : |
-        
-        git config --local user.email "action@github.com"
-        git config --local user.name "github-actions[bot]"
 
-        mkdir html_build
-
-        git worktree add -B docs html_build origin/docs
-        # cp -a docs/. html_build/ 
-        robocopy .\docs\ .\html_build\ /e
-
-        cd html_build
-
-        git add . 
-        git commit -m "ghpages"
-        git push -f
-            
   sphinx:
     runs-on: windows-2019
     needs: doxygen
@@ -108,7 +91,7 @@ jobs:
       run: |
         ls 
         cd src
-        cmake ./src/  -G"Visual Studio 16 2019"  -DCMAKE_GENERATOR_PLATFORM="x64"   -DCMAKE_INSTALL_PREFIX=".\..\build\Python" -DDHARTAPI_Config="All" -DDHARTAPI_EnableTests="False" -DCMAKE_CONFIGURATION_TYPES="Release" -DDHARTAPI_EnablePython="True" -DDHARTAPI_EnableCSharp="False" -DINSTALL_GTEST="False"  ".\" 2>&1
+        cmake ./src/  -G"Visual Studio 17 2022"  -DCMAKE_GENERATOR_PLATFORM="x64"   -DCMAKE_INSTALL_PREFIX=".\..\build\Python" -DDHARTAPI_Config="All" -DDHARTAPI_EnableTests="False" -DCMAKE_CONFIGURATION_TYPES="Release" -DDHARTAPI_EnablePython="True" -DDHARTAPI_EnableCSharp="False" -DINSTALL_GTEST="False"  ".\" 2>&1
 
     - name: cmake build
       run: |
@@ -122,32 +105,6 @@ jobs:
         cd src
         cmake --install .
 
-    # - name: check Existing dhart 
-    #   run: |
-    #     python -c "from dhart.spatialstructures import Graph"
-
-    # - name: Install package
-    #   run: |
-    #     ls
-    #     cd build/Python
-    #     ls
-    #     pip install . 
-
-    # - name: test if package dll is installed
-    #   run: | 
-    #     ls 
-    #     cd build/Python
-    #     ls 
-    #     cd bin 
-    #     ls
-    #     python -c "import dhart"
-    #     ls
-    #     python -c "from dhart.spatialstructures import Graph"
-    
-    # - name: Install Sphinx Latex
-    #   run: |
-        # sudo apt-get update -y && sudo apt-get install -y latexmk texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended
-
     - name: Build documentation with sphinx
       run: |
         cd "docs/Python Docs"
@@ -160,21 +117,15 @@ jobs:
         cd html
         ls
 
-    - name: Auto-deploy python doc changes
-      run : |
-        
-        git config --local user.email "action@github.com"
-        git config --local user.name "github-actions[bot]"
+    - name: Run sphinx doctests
+      run: |
+        cd "docs/Python Docs"
+        ls
+        ./make.bat clean
+        ./make.bat doctest
 
-        mkdir html_build
-
-        git worktree add -B docs html_build origin/docs
-        robocopy .\docs\ .\html_build\ /e
-
-        cd html_build
-
-        git add . 
-        git commit -m "ghpages"
-        git push -f
-            
-            
+    - name: Run pytest
+      run: |
+        cd "build/Python"
+        ls
+        pytest --doctest-modules --ignore-glob="*/Rhino*.py"
