--- a/.github/workflows/documentation_test.yml
+++ b/.github/workflows/documentation_test.yml
@@ -7,6 +7,82 @@ on:
             - main
 
 jobs:
+
+    sphinx:
+        runs-on: windows-2022
+        needs: doxygen
+        strategy:
+          max-parallel: 0
+          matrix:
+            python-version: [3.10]
+    
+        steps:
+        - uses: actions/checkout@v2
+        - name: Set up Python ${{ matrix.python-version }}
+          uses: actions/setup-python@v2
+          with:
+            python-version: ${{ matrix.python-version }}
+        - uses: actions/checkout@v2
+          with: # for github push action
+            #persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
+            fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
+        - name: Install dependencies
+          run: |
+            python -m pip install --upgrade pip
+            pip install flake8 pytest
+    
+        - name: Install documentation dependencies
+          run: |
+            pip install sphinx numpydoc matplotlib         
+    
+        - name: Setup cmake
+          run: |
+            ls 
+            cd src
+            cmake ./src/  -G"Visual Studio 17 2022"  -DCMAKE_GENERATOR_PLATFORM="x64"   -DCMAKE_INSTALL_PREFIX=".\..\build\Python" -DDHARTAPI_Config="All" -DDHARTAPI_EnableTests="False" -DCMAKE_CONFIGURATION_TYPES="Release" -DDHARTAPI_EnablePython="True" -DDHARTAPI_EnableCSharp="False" -DINSTALL_GTEST="False"  ".\" 2>&1
+    
+        - name: cmake build
+          run: |
+            ls
+            cd src
+            cmake --build . --config Release
+    
+        - name: cmake Install
+          run: |
+            ls
+            cd src
+            cmake --install .
+    
+        - name: pip Install
+          run: |
+            cd "build/Python"
+            pip install .
+    
+        - name: Build documentation with sphinx
+          run: |
+            cd "docs/Python Docs"
+            ls
+            ./make.bat clean
+            ./make.bat html
+            # make latexpdf
+            cd build
+            ls
+            cd html
+            ls
+    
+        - name: Run sphinx doctests
+          run: |
+            cd "docs/Python Docs"
+            ls
+            ./make.bat clean
+            ./make.bat doctest
+    
+        - name: Run pytest
+          run: |
+            cd "build/Python"
+            ls
+            pytest --doctest-modules --ignore-glob="*/Rhino*.py"
+            
   doxygen:
 
     runs-on: windows-2019
@@ -51,81 +127,3 @@ jobs:
         doxygen Doxyfile_Csharp
         doxygen Doxyfile_Public_CSharp
 
-
-  sphinx:
-    runs-on: windows-2022
-    needs: doxygen
-    strategy:
-      max-parallel: 0
-      matrix:
-        python-version: [3.10]
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - uses: actions/checkout@v2
-      with: # for github push action
-        #persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
-        fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-
-    - name: Install from pypi
-      run: | 
-        pip install matplotlib 
-        pip install numpy 
-        pip install scipy
-        pip install dhart
-        python -c "from dhart.spatialstructures import Graph"
-
-    - name: Install documentation dependencies
-      run: |
-        pip install sphinx numpydoc matplotlib         
-
-    - name: Setup cmake
-      run: |
-        ls 
-        cd src
-        cmake ./src/  -G"Visual Studio 17 2022"  -DCMAKE_GENERATOR_PLATFORM="x64"   -DCMAKE_INSTALL_PREFIX=".\..\build\Python" -DDHARTAPI_Config="All" -DDHARTAPI_EnableTests="False" -DCMAKE_CONFIGURATION_TYPES="Release" -DDHARTAPI_EnablePython="True" -DDHARTAPI_EnableCSharp="False" -DINSTALL_GTEST="False"  ".\" 2>&1
-
-    - name: cmake build
-      run: |
-        ls
-        cd src
-        cmake --build . --config Release
-
-    - name: cmake Install
-      run: |
-        ls
-        cd src
-        cmake --install .
-
-    - name: Build documentation with sphinx
-      run: |
-        cd "docs/Python Docs"
-        ls
-        ./make.bat clean
-        ./make.bat html
-        # make latexpdf
-        cd build
-        ls
-        cd html
-        ls
-
-    - name: Run sphinx doctests
-      run: |
-        cd "docs/Python Docs"
-        ls
-        ./make.bat clean
-        ./make.bat doctest
-
-    - name: Run pytest
-      run: |
-        cd "build/Python"
-        ls
-        pytest --doctest-modules --ignore-glob="*/Rhino*.py"
