--- a/.github/workflows/documentation_test.yml
+++ b/.github/workflows/documentation_test.yml
@@ -13,7 +13,7 @@ jobs:
         strategy:
           max-parallel: 0
           matrix:
-            python-version: ['3.11']
+            python-version: [3.8]
     
         steps:
         - uses: actions/checkout@v2
