--- a/.github/workflows/documentation_test.yml
+++ b/.github/workflows/documentation_test.yml
@@ -57,7 +57,13 @@ jobs:
             cd "build/Python"
             python -m pip install --upgrade pip
             python -m pip install .
-    
+
+        - name: Check installed package
+          run: |
+            pip show dhart
+            python -c "import platform; print(platform.architecture())"
+            python -c "import dhart; print(dhart.__file__)"
+          
         - name: Build documentation with sphinx
           run: |
             cd "docs/Python Docs"
