--- a/.github/workflows/documentation_test.yml
+++ b/.github/workflows/documentation_test.yml
@@ -55,17 +55,17 @@ jobs:
             cd bin
             ls
 
+        - name: pip install
+          run: |
+            cd "D:/a/dhart/dhart/build/Python"
+            python -m pip install --upgrade pip
+            python -m pip install .
+
         - name: Check Python Install
           run: |
             python -c "from dhart.spatialstructures import Graph"
             python -c "import platform; print(platform.architecture())"
             python -c "import dhart; print(dhart.__file__)"
-
-        - name: pip install
-          run: |
-            cd build/Python
-            python -m pip install --upgrade pip
-            python -m pip install .
 
         - name: Install dependencies
           run: |
