try in-place pip install

--- a/.github/workflows/documentation_test.yml
+++ b/.github/workflows/documentation_test.yml
@@ -59,7 +59,7 @@ jobs:
           run: |
             cd "D:/a/dhart/dhart/build/Python"
             python -m pip install --upgrade pip
-            python -m pip install .
+            python -m pip install -e .
 
         - name: Check Python Install
           run: |
