--- a/.github/workflows/documentation_test.yml
+++ b/.github/workflows/documentation_test.yml
@@ -59,12 +59,13 @@ jobs:
             cd bin
             ls
 
-        - name: pip install
+        - name: Build and Install Wheel
           run: |
             cd "D:/a/dhart/dhart/build/Python"
             python -m pip install --upgrade pip
-            python -m pip install -e .
-            # pip install dhart
+            python -m pip install build
+            python -m build 
+            pip install .\dist\dhart-0.2.8-py3-none-any.whl
 
         - name: Check Python Install
           run: |
