--- a/.github/workflows/documentation_test.yml
+++ b/.github/workflows/documentation_test.yml
@@ -63,9 +63,7 @@ jobs:
           run: |
             cd "D:/a/dhart/dhart/build/Python"
             python -m pip install --upgrade pip
-            python -m pip install build
-            python -m build 
-            pip install .\dist\dhart-0.2.8-py3-none-any.whl
+            python -m pip install -i https://test.pypi.org/simple/ dhart
 
         - name: Check Python Install
           run: |
