--- a/.github/workflows/documentation_test.yml
+++ b/.github/workflows/documentation_test.yml
@@ -63,6 +63,8 @@ jobs:
           run: |
             cd "D:/a/dhart/dhart/build/Python"
             python -m pip install --upgrade pip
+            python -m pip install --upgrade pip setuptools wheel
+            python -m pip install numpy matplotlib scipy
             python -m pip install -i https://test.pypi.org/simple/ dhart
 
         - name: Check Python Install
