--- a/.github/workflows/publish_testpypi.yml
+++ b/.github/workflows/publish_testpypi.yml
@@ -63,7 +63,7 @@ jobs:
           run: |
             cd "D:/a/dhart/dhart/build/Python"
             python -m pip install --upgrade pip
-            python -m pip install setuptools wheel twine
+            python -m pip install setuptools wheel twine build
             python -m pip install numpy matplotlib scipy
                 
         # Step 4: Build the package
