--- a/.github/workflows/publish_testpypi.yml
+++ b/.github/workflows/publish_testpypi.yml
@@ -71,6 +71,7 @@ jobs:
           run: |
             cd "D:/a/dhart/dhart/build/Python"
             python -m build
+            ls
             # python setup.py sdist bdist_wheel
 
         # Step 5: Publish to Test PyPI
@@ -79,4 +80,6 @@ jobs:
             TWINE_USERNAME: "__token__" # Required for Test PyPI token
             TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
           run: |
+            cd "D:/a/dhart/dhart/build/Python"
+            ls
             twine upload --repository-url https://test.pypi.org/legacy/ dist/*
