--- a/.github/workflows/publish_testpypi.yml
+++ b/.github/workflows/publish_testpypi.yml
@@ -83,3 +83,25 @@ jobs:
             cd "D:/a/dhart/dhart/build/Python"
             ls
             twine upload --repository-url https://test.pypi.org/legacy/ dist/*
+
+        - name: Check Python Install
+          run: | 
+            pip install -i https://test.pypi.org/simple/ dhart==0.2.8
+        
+        - name: Try to import dhart
+          run: |
+            python -c "from dhart.spatialstructures import Graph"
+            python -c "import platform; print(platform.architecture())"
+            python -c "import dhart; print(dhart.__file__)"
+        
+        - name: Run Sphinx from testpypi
+          run: |
+            cd "D:/a/dhart/dhart/build/Python"
+            python -m pip install flake8 pytest
+            python -m pip install sphinx numpydoc matplotlib       
+            ls
+            cd "docs/Python Docs"
+            ls
+            ./make.bat clean
+            ./make.bat html
+            ./make.bat doctest
