--- a/.github/workflows/publish_testpypi.yml
+++ b/.github/workflows/publish_testpypi.yml
@@ -82,11 +82,11 @@ jobs:
           run: |
             cd "D:/a/dhart/dhart/build/Python"
             ls
-            twine upload --repository testpypi dist/*
+            twine upload --repository testpypi dist/* --verbose
 
         - name: Check Python Install
           run: | 
-            pip install -i https://test.pypi.org/simple/ dhart==0.2.9
+            pip install -i https://test.pypi.org/simple/ dhart
         
         - name: Try to import dhart
           run: |
