--- a/.github/workflows/publish_testpypi.yml
+++ b/.github/workflows/publish_testpypi.yml
@@ -74,6 +74,12 @@ jobs:
             ls
             # python setup.py sdist bdist_wheel
 
+        - name: Increment Package Version
+          run: |
+            cd "D:/a/dhart/dhart/build/Python"
+            python -m pip install bump
+            python -m bump
+
         # Step 5: Publish to Test PyPI
         - name: Publish to Test PyPI
           env:
@@ -105,3 +111,5 @@ jobs:
             ./make.bat clean
             ./make.bat html
             ./make.bat doctest 
+
+            
