mvoe to docs directory for sphinx

--- a/.github/workflows/publish_testpypi.yml
+++ b/.github/workflows/publish_testpypi.yml
@@ -106,10 +106,9 @@ jobs:
             python -m pip install flake8 pytest
             python -m pip install sphinx numpydoc matplotlib       
             ls
-            cd "docs/Python Docs"
+            cd "D:/a/dhart/dhart/docs/Python Docs"
             ls
             ./make.bat clean
             ./make.bat html
             ./make.bat doctest 
 
-            
