--- a/.github/workflows/documentation_test.yml
+++ b/.github/workflows/documentation_test.yml
@@ -3,7 +3,7 @@ name: Documentation Tests
 on:
     pull_request:
         branches:    
-            - dev_stage
+            # - dev_stage
             - main
 
 jobs:
