--- a/.github/workflows/publish_testpypi.yml
+++ b/.github/workflows/publish_testpypi.yml
@@ -92,7 +92,7 @@ jobs:
 
         - name: Check Python Install
           run: | 
-            pip install -i https://test.pypi.org/simple/ dhart
+            pip install -i https://test.pypi.org/simple/ dhart==0.2.22
         
         - name: Try to import dhart
           run: |
@@ -100,15 +100,15 @@ jobs:
             python -c "import platform; print(platform.architecture())"
             python -c "import dhart; print(dhart.__file__)"
         
-        - name: Run Sphinx from testpypi
-          run: |
-            cd "D:/a/dhart/dhart/build/Python"
-            python -m pip install flake8 pytest
-            python -m pip install sphinx numpydoc matplotlib       
-            ls
-            cd "D:/a/dhart/dhart/docs/Python Docs"
-            ls
-            ./make.bat clean
-            ./make.bat html
-            ./make.bat doctest 
+        # - name: Run Sphinx from testpypi
+        #   run: |
+        #     cd "D:/a/dhart/dhart/build/Python"
+        #     python -m pip install flake8 pytest
+        #     python -m pip install sphinx numpydoc matplotlib       
+        #     ls
+        #     cd "D:/a/dhart/dhart/docs/Python Docs"
+        #     ls
+        #     ./make.bat clean
+        #     ./make.bat html
+        #     ./make.bat doctest 
 
