--- a/.github/workflows/documentation_test.yml
+++ b/.github/workflows/documentation_test.yml
@@ -1,7 +1,7 @@
 name: Documentation Tests
 
 on:
-    pull_request:
+    push:
         branches:    
             # - dev_stage
             - main
