--- a/.github/workflows/publish_testpypi.yml
+++ b/.github/workflows/publish_testpypi.yml
@@ -25,20 +25,22 @@ jobs:
           with: # for github push action
             #persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
             fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
- 
-        - name: Configure cmake
-          run: |                       
-            cmake -S src -B build -G "Visual Studio 16 2019" -A x64 `
-            -DCMAKE_INSTALL_PREFIX="D:/a/dhart/dhart/build/Python" `
-            -DDHARTAPI_Config=All `
-            -DDHARTAPI_EnableTests=False `
-            -DCMAKE_CONFIGURATION_TYPES=Release `
-            -DDHARTAPI_EnablePython=True `
-            -DDHARTAPI_EnableCSharp=False `
-            -DINSTALL_GTEST=False `
-            -DCMAKE_VERBOSE_MAKEFILE=ON
 
-            cmake --build build --config Release --verbose
+        - name: Configure CMake
+          run: |
+            cmake ./src/ \
+            -G "Visual Studio 16 2019" \
+            -DCMAKE_GENERATOR_PLATFORM="x64" \
+            -DCMAKE_INSTALL_PREFIX="D:/a/dhart/dhart/build/Python" \
+            -DDHARTAPI_Config="All" \
+            -DDHARTAPI_EnableTests="False" \
+            -DCMAKE_CONFIGURATION_TYPES="Release" \
+            -DDHARTAPI_EnablePython="True" \
+            -DDHARTAPI_EnableCSharp="False" \
+            -DEmbree_DIR="D:/a/dhart/dhart/src/external/Embree"
+          
+        - name: cmake
+          run: cmake --build build --config Release --verbose
 
         # - name: Configure cmake
         #   run: |
