--- a/.github/workflows/publish_testpypi.yml
+++ b/.github/workflows/publish_testpypi.yml
@@ -25,12 +25,11 @@ jobs:
           with: # for github push action
             #persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
             fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
-
         - name: Configure CMake
           run: |
-            cmake ./src/ `
-            -G"Visual Studio 16 2019" `
-            -DCMAKE_GENERATOR_PLATFORM="x64" `
+            cmake -S src -B build `
+            -G "Visual Studio 16 2019" `
+            -A x64 `
             -DCMAKE_INSTALL_PREFIX="D:/a/dhart/dhart/build/Python" `
             -DDHARTAPI_Config="All" `
             -DDHARTAPI_EnableTests="False" `
@@ -38,10 +37,11 @@ jobs:
             -DDHARTAPI_EnablePython="True" `
             -DDHARTAPI_EnableCSharp="False" `
             -DEmbree_DIR="D:/a/dhart/dhart/src/external/Embree"
+        
+        - name: Build
+          run: |
+            cmake --build build --config Release --verbose
           
-        - name: cmake
-          run: cmake --build build --config Release --verbose
-
         # - name: Configure cmake
         #   run: |
         #     cd src
