--- a/.github/workflows/publish_testpypi.yml
+++ b/.github/workflows/publish_testpypi.yml
@@ -56,8 +56,8 @@ jobs:
         - name: cmake Install
           run: |
               ls
-              cd src
-              cmake --install .
+              cmake --install build --config Release
+
 
         - name: Add build directory to PATH
           run: |
