Dev stage for documentation actions (#85)
* Update CMakeLists.txt

add conftest to cmake list

* Add github action for staging test doc build

* Update documentation_test.yml

Set for pull requests

* Update documentation_test.yml

* Update documentation_test.yml

* Update documentation_test.yml

* Update documentation_test.yml

* Remove deployments from staging, add pytest

* Update documentation_test.yml

* install locally instead of pypi

* remove doxygen requirement for sphinx

* fix yaml format

* fix python format

* change python version

* try action with 3.8

* use older visual studio

* Update documentation_test.yml

* add python check

* Update documentation_test.yml

* split sphinx and doxygen tests

* Update documentation_test.yml

* Update CMakeLists.txt

* Update cmakelists to 3.10

* Update documentation_test.yml

* Update documentation_test.yml

* Update documentation_test.yml

* add dll error exception

* try in-place pip install

* Update documentation_test.yml

* Update documentation_test.yml

* Update documentation_test.yml

* increment version

* Update documentation_test.yml

* Update documentation_test.yml

* switch to testpypi for pip install

* Update documentation_test.yml

* Create publish_testpypi.yml

* Update publish_testpypi.yml

* Update publish_testpypi.yml

* Update publish_testpypi.yml

* Show wheel build

* try to run docs from the pypi build

* Update publish_testpypi.yml

* Update publish_testpypi.yml

* Update publish_testpypi.yml

* try different version nummber

* add bump for versioning

* mvoe to docs directory for sphinx

* Update setup.py

* Update setup.py

* Update documentation_test.yml

* update dhart

* Update documentation_test.yml

* Update publish_testpypi.yml

* Update setup.py

* query cmake

* bump

* Update publish_testpypi.yml

* Update publish_testpypi.yml

* Update publish_testpypi.yml

* Update publish_testpypi.yml

* Update publish_testpypi.yml

* Update publish_testpypi.yml

* Update publish_testpypi.ym

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required (VERSION 3.8)
+cmake_minimum_required (VERSION 3.10)
 
 # Paths
 set(PYTHON_PACKAGE_DIR "Python")
@@ -601,6 +601,7 @@ if(DHARTAPI_EnablePython)
     install (FILES ${DEBUG_DEPENDENCY_BINARIES} CONFIGURATIONS Debug DESTINATION dhart/bin)
 
     LIST(APPEND ROOT_FILES ${PYTHON_PACKAGE_DIR}/setup.py)
+    LIST(APPEND ROOT_FILES ${PYTHON_PACKAGE_DIR}/conftest.py)
 endif()
 
 
