--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -28,7 +28,8 @@ jobs:
     - name: Install windows documentation requirements
       run: |
         $url = "https://www.doxygen.nl/files/doxygen-1.9.5.windows.x64.bin.zip"
-        Start-DownloadWit`hRetry -Url $url -Name "doxygen.zip" -DownloadPath "C:\"
+        Invoke-WebRequest -Uri $url -OutFile "C:\doxygen.zip"
+        
         Extract-7Zip -Path  "C:\doxygen.zip" -DestinationPath "C:\windows\system32"
         doxygen --version`
 
