--- a/src/CMakeSettings.json
+++ b/src/CMakeSettings.json
@@ -175,6 +175,39 @@
           "type": "BOOL"
         }
       ]
+    },
+    {
+      "name": "x64-Debug-C",
+      "generator": "Visual Studio 17 2022 Win64",
+      "configurationType": "Debug",
+      "buildRoot": "${projectDir}\\out\\build\\${name}",
+      "installRoot": "${projectDir}\\out\\install\\${name}",
+      "cmakeCommandArgs": "",
+      "buildCommandArgs": "",
+      "ctestCommandArgs": "",
+      "inheritEnvironments": [ "msvc_x64_x64" ],
+      "variables": [
+        {
+          "name": "DHARTAPI_Config",
+          "value": "All",
+          "type": "STRING"
+        },
+        {
+          "name": "DHARTAPI_EnableTests",
+          "value": "True",
+          "type": "BOOL"
+        },
+        {
+          "name": "DHARTAPI_BuildCSharpTests",
+          "value": "False",
+          "type": "BOOL"
+        },
+        {
+          "name": "DHARTAPI_EnableCSharp",
+          "value": "False",
+          "type": "BOOL"
+        }
+      ]
     }
   ]
 }
