--- a/.github/workflows/linux_test.yml
+++ b/.github/workflows/linux_test.yml
@@ -62,6 +62,7 @@ jobs:
     - name: cmake install
       run: |
         ls
+        cd build
         make && make install
         
     - name : Install package
