--- a/.github/workflows/linux_test.yml
+++ b/.github/workflows/linux_test.yml
@@ -32,6 +32,10 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y doxygen graphviz
     
+    - name : Pull from Git LFS
+      run: |
+        git lfs pull
+    
     - name : Install Python dependencies
       run: |
         python -m pip install --upgrade pip
