updated workflow run conditions, linux doctest continues on error

--- a/.github/workflows/documentation_test.yml
+++ b/.github/workflows/documentation_test.yml
@@ -4,6 +4,10 @@ on:
     push:
         branches:    
             - dev_stage
+    pull_request:
+        branches:    
+            - dev_stage
+            - main
 
 
 jobs:
