--- a/.github/workflows/doxygen_test.yaml
+++ b/.github/workflows/doxygen_test.yaml
@@ -4,10 +4,10 @@ on:
     push: 
         branches:
             - main
-    # pull_request:
-    #     branches:    
-    #         - dev_stage
-    #         - main
+    pull_request:
+        branches:    
+            - dev_stage
+            - main
 
 jobs:
 
