--- a/.github/workflows/linux_test.yml
+++ b/.github/workflows/linux_test.yml
@@ -18,6 +18,7 @@ jobs:
         python-version: ['3.10']
 
     steps:
+
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
@@ -87,6 +88,7 @@ jobs:
       run: |
         cd docs/Python\ Docs/
         python -m sphinx source build --builder doctest
+      continue-on-error: true
     # - name: check Existing dhart 
     #   run: |
     #     python -c "from dhart.spatialstructures import Graph"
