line breaks on linux test workflow

--- a/.github/workflows/linux_test.yml
+++ b/.github/workflows/linux_test.yml
@@ -57,11 +57,11 @@ jobs:
         ls 
         mkdir build
         cd build
-        cmake ../src `
-        -DDHARTAPI_Config=All `
-        -DDHARTAPI_EnablePython=ON `
-        -DDHARTAPI_EnableTests=ON `
-        -DCMAKE_INSTALL_PREFIX="linux-build" `
+        cmake ../src \
+        -DDHARTAPI_Config=All \
+        -DDHARTAPI_EnablePython=ON \
+        -DDHARTAPI_EnableTests=ON \
+        -DCMAKE_INSTALL_PREFIX="linux-build"
         
 
     - name: cmake build
