win test directory error fix

--- a/.github/workflows/windows_test.yml
+++ b/.github/workflows/windows_test.yml
@@ -80,9 +80,7 @@ jobs:
 
     - name : Run HFUnitTests
       run: |
-        cd build\windows-build
-        ls
-        cd Debug
+        cd build\Debug
         .\HFUnitTests.exe
     
     - name : Run Pytest
