documentation2 runs on push to main, linux and windows tests run on push to dev,dev_stage,main

--- a/.github/workflows/linux_test.yml
+++ b/.github/workflows/linux_test.yml
@@ -1,11 +1,10 @@
 name: Linux Tests
 
 on:
-  pull_request:
-    branches:    
-      - main
   push:
     branches:    
+      - dev_stage
+      - dev
       - main
 
 jobs:
